ci(vercel): add rewrite rule for api endpoints
Add rewrite rule to direct all /api/* requests to /api handler

--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,8 @@
     "api/index.ts": {
       "runtime": "@vercel/node@3.0.20"
     }
-  }
+  },
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "/api" }
+  ]
 }
